--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                             </li>
                         </ul>
                     </nav>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
                 </div>
             </div>
         </header>
@@ -85,7 +88,7 @@
                     <div class="offer__inner">
                         <div class="offer__main">
                             <h1 class="offer__title">
-                                Образовательная программа — <span>Маркетинг</span>
+                                Образовательная программа —<br><span>Маркетинг</span>
                             </h1>
                             <p class="offer__subtitle">
                                 Каждый день вы будете осваивать новые маркетинг-технологии одним из первых. Узнаете, как
@@ -105,11 +108,11 @@
                                 <source class="offer__img" srcset="img/offer/phone.webp" type="image/webp">
                                 <img class="offer__img" src="img/offer/phone.png" alt="phone">
                             </picture>
+                            <a class="offer__other" href="#">
+                                Другие наши
+                                программы
+                            </a>
                         </div>
-                        <a class="offer__other" href="#">
-                            Другие наши
-                            программы
-                        </a>
                     </div>
                 </div>
             </section>
@@ -266,7 +269,7 @@
         </div>
     </section>
 
-    <section class="course page__course">
+    <!-- <section class="course page__course">
         <div class="container">
             <h2 class="title course__title">
                 Курс или подписка
@@ -613,7 +616,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="js/main.min.js"></script>
