--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
     </section>
 
-    <!-- <section class="course page__course">
+    <section class="course page__course">
         <div class="container">
             <h2 class="title course__title">
                 Курс или подписка
@@ -372,7 +372,7 @@
         </div>
     </section>
 
-    <section class="discount page__discount">
+    <!-- <section class="discount page__discount">
         <div class="container">
             <div class="discount__inner">
                 <h2 class="title discount__title">
