--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@
         </div>
     </section>
 
-    <!-- <section class="discount page__discount">
+    <section class="discount page__discount">
         <div class="container">
             <div class="discount__inner">
                 <h2 class="title discount__title">
-                    Cкидка по промокоду
+                    Cкидка по&nbsp;промокоду
                 </h2>
                 <form class="discount__form form" action="#" method="post">
                     <input class="discount__input input" type="text" placeholder="Введите промокод">
@@ -393,7 +393,7 @@
         </div>
     </section>
 
-    <section class="training page__training">
+    <!-- <section class="training page__training">
         <div class="container">
             <h2 class="title training__title">
                 Самообучение или подписка
