--- a/index.html
+++ b/index.html
@@ -393,10 +393,10 @@
         </div>
     </section>
 
-    <!-- <section class="training page__training">
+    <section class="training page__training">
         <div class="container">
             <h2 class="title training__title">
-                Самообучение или подписка
+                Самообучение или&nbsp;подписка
             </h2>
             <div class="training__inner">
                 <div class="training__item">
@@ -417,7 +417,7 @@
         </div>
     </section>
 
-    <section class="option page__option">
+    <!-- <section class="option page__option">
         <div class="container">
             <div class="option__inner">
                 <div class="option__main">
