--- a/index.html
+++ b/index.html
@@ -400,14 +400,20 @@
             </h2>
             <div class="training__inner">
                 <div class="training__item">
-                    <img class="training__img" src="img/training/1.svg" alt="">
+                    <picture>
+                        <source class="training__img" srcset="img/training/3.svg" alt="" media="(max-width: 1200px)">
+                        <img class="training__img" src="img/training/1.svg" alt="">
+                    </picture>
                     <p class="training__text">
                         Самостоятельное обучение — долгий, трудный и не очень приятный путь. Все знания вам придется
                         добывать на собственных ошибках
                     </p>
                 </div>
                 <div class="training__item">
-                    <img class="training__img" src="img/training/2.svg" alt="">
+                    <picture>
+                        <source class="training__img" srcset="img/training/4.svg" alt="" media="(max-width: 1200px)">
+                        <img class="training__img" src="img/training/2.svg" alt="">
+                    </picture>
                     <p class="training__text">
                         На платформе вы получите уже отобранный и проверенный материал. Так вы сэкономите много сил,
                         времени и средств
