--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         </div>
     </section>
 
-    <!-- <section class="option page__option">
+    <section class="option page__option">
         <div class="container">
             <div class="option__inner">
                 <div class="option__main">
@@ -453,7 +453,7 @@
     </section>
 
 
-    <section class="questions page__questions">
+    <!-- <section class="questions page__questions">
         <div class="container">
             <h2 class="title questions__title">
                 Вопросы и ответы
