--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="format-detection" content="address=no">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="fonts/Pt Root UI/ptrootui.css">
+    <link rel="stylesheet" href="fonts/Pt-Root-UI/ptrootui.css">
 
     <!-- STYLES -->
     <link href="css/normalize.css" rel="stylesheet">
@@ -453,7 +453,7 @@
     </section>
 
 
-    <!-- <section class="questions page__questions">
+    <section class="questions page__questions">
         <div class="container">
             <h2 class="title questions__title">
                 Вопросы и ответы
@@ -575,7 +575,7 @@
     </section>
 
 
-    <footer class="footer page__footer">
+    <!--  <footer class="footer page__footer">
         <div class="container">
             <div class="footer__inner">
                 <div class="footer__item">
