--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
     </section>
 
 
-    <!--  <footer class="footer page__footer">
+    <footer class="footer page__footer">
         <div class="container">
             <div class="footer__inner">
                 <div class="footer__item">
@@ -622,7 +622,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
 
     <script src="js/main.min.js"></script>
