--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <a class="offer__subscribe-link" href="#">
                                     Оформить подписку
                                 </a>
-                                <a class="offer__more-link" href="#">
+                                <a class="offer__more-link" href="#" data-goto=".about">
                                     Узнать подробнее
                                 </a>
                             </div>
