--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
             <div class="container">
                 <div class="header__inner">
                     <a class="header__logo-wrapper" href="#">
-                        <img class="header__logo wow animate__animated animate__fadeIn" src="img/global/logo.svg" alt="">
+                        <img class="header__logoanimate__animated animate__fadeIn" src="img/global/logo.svg" alt="">
                     </a>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li class="header__item wow animate__animated animate__bounceInUp">
+                            <li class="header__item animate__animated animate__bounceInUp">
                                 <a class="header__link" href="#">О продукте</a>
                             </li>
-                            <li class="header__item wow animate__animated animate__bounceInUp" data-wow-delay="0.1s">
+                            <li class="header__item animate__animated animate__bounceInUp" data-wow-delay="0.1s">
                                 <a class="header__link" href="#">Материал</a>
                             </li>
-                            <li class="header__item wow animate__animated animate__bounceInUp" data-wow-delay="0.2s">
+                            <li class="header__item animate__animated animate__bounceInUp" data-wow-delay="0.2s">
                                 <a class="header__link" href="#">Кому подходит</a>
                             </li>
-                            <li class="header__item wow animate__animated animate__bounceInUp" data-wow-delay="0.3s">
+                            <li class="header__item animate__animated animate__bounceInUp" data-wow-delay="0.3s">
                                 <a class="header__link" href="#">Курсы</a>
                             </li>
-                            <li class="header__item wow animate__animated animate__bounceInUp" data-wow-delay="0.4s">
+                            <li class="header__item animate__animated animate__bounceInUp" data-wow-delay="0.4s">
                                 <a class="header__link" href="#">BUGO</a>
                             </li>
-                            <li class="header__item wow animate__animated animate__bounceInUp" data-wow-delay="0.5s">
+                            <li class="header__item animate__animated animate__bounceInUp" data-wow-delay="0.5s">
                                 <a class="header__link" href="#">Самообучение</a>
                             </li>
                         </ul>
@@ -88,23 +88,23 @@
                 <div class="container">
                     <div class="offer__inner">
                         <div class="offer__main">
-                            <h1 class="offer__title wow animate__animated animate__fadeInLeft">
+                            <h1 class="offer__title animate__animated animate__fadeInLeft">
                                 Образовательная программа —<br><span>Маркетинг</span>
                             </h1>
-                            <p class="offer__subtitle wow animate__animated animate__fadeInLeft" data-wow-delay=".4s">
+                            <p class="offer__subtitle animate__animated animate__fadeInLeft" data-wow-delay=".4s">
                                 Каждый день вы будете осваивать новые маркетинг-технологии одним из первых. Узнаете, как
                                 работает современный маркетинг и как безошибочно настравивать рекламные кампании
                             </p>
                             <div class="offer__links">
-                                <a class="offer__subscribe-link animate__animated wow animate__zoomIn" data-wow-delay=".6s" href="#">
+                                <a class="offer__subscribe-link animate__animated animate__zoomIn" data-wow-delay=".6s" href="#">
                                     Оформить подписку
                                 </a>
-                                <a class="offer__more-link animate__animated wow animate__zoomIn" href="#" data-goto=".about" data-wow-delay="1s">
+                                <a class="offer__more-link animate__animated animate__zoomIn" href="#" data-goto=".about" data-wow-delay="1s">
                                     Узнать подробнее
                                 </a>
                             </div>
                         </div>
-                        <div class="offer__img-wrapper wow animate__animated animate__fadeInRight" data-wow-delay=".4s">
+                        <div class="offer__img-wrapper animate__animated animate__fadeInRight" data-wow-delay=".4s">
                             <picture>
                                 <source class="offer__img" srcset="img/offer/phone.webp" type="image/webp">
                                 <img class="offer__img" src="img/offer/phone.png" alt="phone">
