--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="header__inner">
                     <a class="header__logo-wrapper" href="#">
-                        <img class="header__logoanimate__animated animate__fadeIn" src="img/global/logo.svg" alt="">
+                        <img class="header__logo animate__animated animate__fadeIn" src="img/global/logo.svg" alt="">
                     </a>
                     <nav class="header__menu">
                         <ul class="header__list">
