--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="offer__img-wrapper animate__animated animate__fadeInRight wow" data-wow-delay=".4s">
+                        <div class="offer__img-wrapper animate__animated animate__fadeInUp wow" data-wow-delay=".4s">
                             <picture>
                                 <source class="offer__img" srcset="img/offer/phone.webp" type="image/webp">
                                 <img class="offer__img" src="img/offer/phone.png" alt="phone">
