--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section class="about page__about">
         <div class="container">
             <div class="about__inner">
-                <div class="about__main">
+                <div class="about__main wow animate__animated animate__fadeInUp">
                     <h2 class="about__title title">
                         О продукте
                     </h2>
@@ -137,7 +137,7 @@
                         сторонними ресурсами и делаем процесс обучения привычным уже на старте.
                     </p>
                 </div>
-                <div class="about__info">
+                <div class="about__info wow animate__animated animate__fadeIn" data-wow-delay=".5s">
                     <div class="about__item">
                         <span>Проверенные</span> материалы
                     </div>
@@ -154,16 +154,16 @@
 
     <section class="quality page__quality">
         <div class="container">
-            <h2 class="quality__title title">
+            <h2 class="quality__title title wow animate__animated animate__fadeIn">
                 Качество материала
             </h2>
-            <p class="quality__subtitle">
+            <p class="quality__subtitle wow animate__animated animate__fadeIn" data-wow-delay="0.2s">
                 Мы выставили несколько статей в бесплатный доступ, чтобы&nbsp;вы могли ознакомиться и сами понять,
                 какого
                 уровня материалы будут публиковаться на платформе
             </p>
             <div class="quality__inner">
-                <a class="quality__item" href="#">
+                <a class="quality__item wow animate__animated animate__fadeInUp" href="#">
                     <picture>
                         <source class="quality__img" srcset="img/quality/1.webp" alt="">
                         <img class="quality__img" src="img/quality/1.jpg" alt="">
@@ -172,7 +172,7 @@
                         Разбор 3 самых успешных <span>рекламных&nbsp;кампаний</span> за&nbsp;последний месяц
                     </p>
                 </a>
-                <a class="quality__item" href="#">
+                <a class="quality__item wow animate__animated animate__fadeInUp" href="#">
                     <picture>
                         <source class="quality__img" srcset="img/quality/2.webp" alt="">
                         <img class="quality__img" src="img/quality/2.jpg" alt="">
@@ -182,7 +182,7 @@
                         на практике: в каких <br> случаях оно необходимо
                     </p>
                 </a>
-                <a class="quality__item" href="#">
+                <a class="quality__item wow animate__animated animate__fadeInUp" href="#">
                     <picture>
                         <source class="quality__img" srcset="img/quality/3.webp" alt="">
                         <img class="quality__img" src="img/quality/3.jpg" alt="">
@@ -191,7 +191,7 @@
                         Необходимые знания в&nbsp;маркетинге <span>для&nbsp;предпринимателей</span>
                     </p>
                 </a>
-                <a class="quality__item quality__item--disabled" href="#">
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#">
                     <picture>
                         <source class="quality__img" srcset="img/quality/4.webp" alt="">
                         <img class="quality__img" src="img/quality/4.jpg" alt="">
@@ -200,7 +200,7 @@
                         Запуск инфопродукта, который&nbsp;принёс <br> <span>25&nbsp;000&nbsp;000&nbsp;руб.</span>
                     </p>
                 </a>
-                <a class="quality__item quality__item--disabled" href="#" disabled>
+                <a class="quality__item wow animate__animated animate__fadeInUp quality__item--disabled" href="#" disabled>
                     <picture>
                         <source class="quality__img" srcset="img/quality/5.webp" alt="">
                         <img class="quality__img" src="img/quality/5.jpg" alt="">
@@ -211,7 +211,7 @@
                         рекламной кампании
                     </p>
                 </a>
-                <a class="quality__item" href="#">
+                <a class="quality__item wow animate__animated animate__fadeInUp" href="#">
                     <picture>
                         <source class="quality__img" srcset="img/quality/6.webp" alt="">
                         <img class="quality__img" src="img/quality/6.jpg" alt="">
@@ -226,10 +226,10 @@
 
     <section class="suitable page__suitable">
         <div class="container">
-            <h2 class="title suitable__title">
+            <h2 class="title suitable__title wow animate__animated animate__fadeInUp">
                 Кому подходит
             </h2>
-            <div class="suitable__inner">
+            <div class="suitable__inner wow animate__animated animate__fadeIn" data-wow-delay="0.3s">
                 <div class="suitable__item">
                     <h3 class="suitable__card-title">
                         Маркетологам
@@ -272,10 +272,10 @@
 
     <section class="course page__course">
         <div class="container">
-            <h2 class="title course__title">
+            <h2 class="title course__title wow animate__animated animate__fadeIn">
                 Курс или подписка
             </h2>
-            <div class="course__inner">
+            <div class="course__inner wow animate__animated animate__fadeInUp" data-wow-delay=".3s">
                 <table class="course__table">
                     <thead class="course__thead">
                         <tr class="course__tr">
@@ -375,7 +375,7 @@
 
     <section class="discount page__discount">
         <div class="container">
-            <div class="discount__inner">
+            <div class="discount__inner wow animate__animated animate__fadeInUp">
                 <h2 class="title discount__title">
                     Cкидка по&nbsp;промокоду
                 </h2>
@@ -396,10 +396,10 @@
 
     <section class="training page__training">
         <div class="container">
-            <h2 class="title training__title">
+            <h2 class="title training__title wow animate__animated animate__fadeInUp">
                 Самообучение или&nbsp;подписка
             </h2>
-            <div class="training__inner">
+            <div class="training__inner wow animate__animated animate__fadeIn" data-wow-delay=".6s">
                 <div class="training__item">
                     <picture>
                         <source class="training__img" srcset="img/training/3.svg" alt="" media="(max-width: 1200px)">
@@ -427,7 +427,7 @@
     <section class="option page__option">
         <div class="container">
             <div class="option__inner">
-                <div class="option__main">
+                <div class="option__main wow animate__animated animate__fadeInUp">
                     <h2 class="option__title title">
                         Brain University Good Option
                     </h2>
@@ -446,7 +446,7 @@
                         ни с исполнителя.
                     </p>
                 </div>
-                <div class="option__img-wrapper">
+                <div class="option__img-wrapper wow animate__animated animate__fadeIn" data-wow-delay=".6s">
                     <img class="option__img" src="img/option/main.svg" alt="">
                 </div>
             </div>
@@ -456,12 +456,12 @@
 
     <section class="questions page__questions">
         <div class="container">
-            <h2 class="title questions__title">
+            <h2 class="title questions__title wow animate__animated animate__fadeInDown" data-wow-delay=".3s">
                 Вопросы и ответы
             </h2>
             <div class="questions__inner">
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="1">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="1">
                         Подойдёт ли мне, если я ничего не знаю в маркетинге?
                     </div>
                     <div class="questions__body" data-tab="1">
@@ -476,10 +476,10 @@
                     </div>
                 </div>
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="2">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="2" data-wow-delay=".1s">
                         Можно ли с нуля стать маркетологом по этой программе?
                     </div>
-                    <div class="questions__body" data-tab="2">
+                    <div class="questions__body wow animate__animated animate__fadeInDown" data-tab="2">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto praesentium modi vero rerum
                         dolore sapiente nulla! Commodi nulla magni repudiandae rerum? Nostrum esse nobis autem
                         voluptatibus nulla! Dicta, molestiae dolor magni perferendis officiis animi dolore nostrum
@@ -491,7 +491,7 @@
                     </div>
                 </div>
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="3">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="3" data-wow-delay=".2s">
                         Заменит ли подписка полноценное обучение?
                     </div>
                     <div class="questions__body" data-tab="3">
@@ -506,7 +506,7 @@
                     </div>
                 </div>
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="4">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="4" data-wow-delay=".3s">
                         На какой срок я могу оформить подписку?
                     </div>
                     <div class="questions__body" data-tab="4">
@@ -521,7 +521,7 @@
                     </div>
                 </div>
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="5">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="5" data-wow-delay=".4s">
                         Что делать, если я захочу отменить подписку?
                     </div>
                     <div class="questions__body" data-tab="5">
@@ -536,7 +536,7 @@
                     </div>
                 </div>
                 <div class="questions__item">
-                    <div class="questions__head" data-tab="6">
+                    <div class="questions__head wow animate__animated animate__fadeInDown" data-tab="6" data-wow-delay=".5s">
                         Кто будет составлять материалы?
                     </div>
                     <div class="questions__body" data-tab="6">
@@ -557,12 +557,12 @@
     <section class="special page__special">
         <div class="container">
             <div class="special__inner">
-                <h2 class="title special__title">
+                <h2 class="title special__title wow animate__animated animate__fadeInDown">
                     Специальное предложение
                 </h2>
                 <form class="special__form form" action="#" method="post">
-                    <input class="special__input input" type="text" placeholder="Введите промокод">
-                    <div class="special__btn-wrapper btn-wrapper">
+                    <input class="special__input input wow animate__animated animate__fadeIn" data-wow-delay=".6s" type="text" placeholder="Введите промокод">
+                    <div class="special__btn-wrapper btn-wrapper wow animate__animated animate__fadeIn">
                         <button class="special__btn btn" type="submit">
                             Начать обучение
                         </button>
@@ -579,21 +579,21 @@
     <footer class="footer page__footer">
         <div class="container">
             <div class="footer__inner">
-                <div class="footer__item">
+                <div class="footer__item wow animate__animated animate__fadeInDown" data-wow-delay=".1s">
                     <a href="#"><img class="footer__logo" src="img/footer/logo.svg" alt=""></a>
                 </div>
-                <ul class="footer__list">
+                <ul class="footer__list wow animate__animated animate__fadeInDown" data-wow-delay=".2s">
                     <li class="footer__li">Другие программы</li>
                     <li class="footer__li"><a href="#">Предпринимательство</a></li>
                     <li class="footer__li"><a href="#">SMM</a></li>
                     <li class="footer__li"><a href="#">Wilderries</a></li>
                 </ul>
-                <ul class="footer__list-2">
+                <ul class="footer__list-2 wow animate__animated animate__fadeInDown" data-wow-delay=".3s">
                     <li class="footer__li-2">Юридическая информация</li>
                     <li class="footer__li-2"><a href="#">Политика конфеденциальности</a></li>
                     <li class="footer__li-2"><a href="#">Договор оферты</a></li>
                 </ul>
-                <div class="footer__imgs-wrapper">
+                <div class="footer__imgs-wrapper wow animate__animated animate__fadeInDown" data-wow-delay=".4s">
                     <a href="#">
                         <svg class="footer__img" width="21" height="24" viewbox="0 0 21 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
