--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </a>
                     <nav class="header__menu">
                         <ul class="header__list">
-                            <li class="header__item animate__animated animate__bounceInDown">
+                            <li class="header__item animate__animated animate__bounceInDown wow">
                                 <a class="header__link" href="#">О продукте</a>
                             </li>
                             <li class="header__item animate__animated animate__bounceInDown wow" data-wow-delay="0.1s">
@@ -79,6 +79,7 @@
                     <div class="header__burger">
                         <span></span>
                     </div>
+                    <div class="header__bg"></div>
                 </div>
             </div>
         </header>
@@ -651,7 +652,7 @@
                 </div>
             </form>
         </div>
-        <div class="popup__bg">
+        <div class="popup__bg" data-close="1">
 
         </div>
     </div>
