--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <source class="offer__img" srcset="img/offer/phone.webp" type="image/webp">
                                 <img class="offer__img" src="img/offer/phone.png" alt="phone">
                             </picture>
-                            <a class="offer__other" href="#">
+                            <a class="offer__other" href="#" data-open-pop="2">
                                 Другие наши
                                 программы
                             </a>
@@ -653,6 +653,38 @@
             </form>
         </div>
         <div class="popup__bg" data-close="1">
+
+        </div>
+    </div>
+
+
+    <div class="popup" data-pop="2">
+        <div class="popup__inner">
+            <h3 class="popup__title">
+                Наши программы
+            </h3>
+            <div class="popup__list">
+                <div class="popup__item">
+                    <a href="#">
+                        <img class="popup__img" src="img/popup/1.svg" alt="">
+                        <p class="popup__text">Предпринима-<br>тельство</p>
+                    </a>
+                </div>
+                <div class="popup__item">
+                    <a href="#">
+                        <img class="popup__img" src="img/popup/2.svg" alt="">
+                        <p class="popup__text">SMM</p>
+                    </a>
+                </div>
+                <div class="popup__item">
+                    <a href="#">
+                        <img class="popup__img" src="img/popup/3.svg" alt="">
+                        <p class="popup__text">Wildberries</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="popup__bg" data-close="2">
 
         </div>
     </div>
